Add Phase 2 migration verification: Old UI vs JSON comparison
- OldUiVsJsonTest: SSO login flow + 7-type article comparison via SoftAssert
- OldAdminNewsListPageAction/UI: URL-based navigation, pagination, td:nth-child(4) b selector
- ArticleDataStore: singleton ZIP loader with fuzzy title matching (NFC + \p{Cf} strip)
- MigrationResult: per-type result accumulator
- NewsScreenMigrationTest: stub for Phase 3 (New UI vs JSON)
- BaseTest: Chrome media/GPU flags to prevent video-page crashes
- pom.xml: Selenium 4.41.0, TestNG 7.12.0, Gson 2.10.1, POI 5.5.1

Phase 2 findings: 5/7 types 100% match; 2 LegalDocument + 1 PhotoAlbum
articles confirmed as crawl gaps (exist in Old UI but absent from JSON).

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>